# Achar-Tool

./: .clang-format  .gitattributes  .gitignore  README.md  customizing.md  index.md  install.sh  runachar.sh  runbench.sh  setup.py
benchmarks/: README.md
benchmarks/Examples_C/: binpow.c  fact.c  fact.smt2  fastmul.c  fib.c  fib.smt2  gcd.c  intsqrt.c  sum.c  sum.smt2
benchmarks/Multiply/: achar1_test.c  achar1_test.c.json  achar1_test.c.smt  multiply.c  multiply.c.sl  optimized_multiply.c
benchmarks/addons/: achar1.c  achar2.c  achar3.c  achar4.c  achar5.c  achar6.c  achar7.c  achar8.c  achar9.c
benchmarks/pre-train-study/: load_pickle_demo.py  split_smt2.py
chc-fe/: graph-gen.py
clang-fe/: CMakeLists.txt
clang-fe/include/: MainVisitor.h  Rewriter.h  SSAGraph.h  SSAWriter.h  domfrontier.h
clang-fe/src/: MainVisitor.cpp  Rewriter.cpp  SSAGraph.cpp  SSAWriter.cpp  domfrontier.cpp  main.cpp
code2inv/prog_generator/NN_Example/: CMakeLists.txt  dryRun.sh  example_nn.txt  fuzz.sh  mnist_example.py  mnist_model_cpp.pt  start.sh  test.sh
code2inv/prog_generator/NN_Example/include/: 150.h  inv.h
code2inv/prog_generator/NN_Example/src/: 150.cpp
docker/: README.md  achar.Dockerfile
scripts/: .gitignore  README.md  benchmark_all_z3.sh  benchmark_fuzz_all_spec.sh  benchmark_fuzz_spec.sh  benchmark_hybrid_loop_spec.sh  benchmark_hybrid_pre_spec.sh  benchmark_single_z3.sh  check.sh  csvgen.py  data_summary.csv  data_summary.txt  datagen.py  extract_run.sh  generate_data.sh  generate_data_all.sh  getSolved.sh  getSolved_all.sh  plot.sh
(+2798 files in other folders)
